[package]
name = "bme"
version = "0.1.0"
authors = ["Robert Schütte <schuetterobert@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"

bme-macro = { path = "bme-macro" }

wasm-bindgen = "0.2.45"

web-sys = { version = "0.3.22", features = ['console'] }